--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
         run: make vue
       - name: setup go env
         uses: actions/setup-go@v2
+        with:
+          go-version: '^1.16'
       - name: restore Go mod cache
         uses: actions/cache@v2
         with:
