using jsoneditor for json tool

--- a/web/package.json
+++ b/web/package.json
@@ -41,7 +41,12 @@
     },
     "rules": {
       "no-mixed-spaces-and-tabs": "off",
-      "vue/no-parsing-error": [2, { "x-invalid-end-tag": false }]
+      "vue/no-parsing-error": [
+        2,
+        {
+          "x-invalid-end-tag": false
+        }
+      ]
     }
   },
   "browserslist": [
