--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,4 +57,5 @@ jobs:
           EOF
           export KUBECONFIG=$(pwd)/kube-config
           curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
-          kubectl rollout restart -f prin.yml -n k3s-apps
+          cat prin.yml
+          kubectl apply -f prin.yml -n k3s-apps
