--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,15 @@ jobs:
       - name: build app dist
         run: |
           make prin
-      - name: release prin
-        uses: docker/build-push-action@v1.1.0
+      - name: login docker hub
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: aaronzjc/prin
-          tag_with_ref: true
-          tags: latest
+      - name: release prin
+        uses: docker/build-push-action@v1.1.0
+        with:
+          tags: aaronzjc/prin:${{ github.ref }}
       - name: setup ktl
         uses: azure/setup-kubectl@v1
         id: install
