--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - v*
 
 jobs:
   Build_and_Release:
@@ -47,6 +45,7 @@ jobs:
       - name: release prin
         uses: docker/build-push-action@v1.1.0
         with:
+          push: true
           tags: aaronzjc/prin:${{ github.ref }}
       - name: setup ktl
         uses: azure/setup-kubectl@v1
