--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,10 +43,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: release prin
-        uses: docker/build-push-action@v1.1.0
+        uses: docker/build-push-action@v2
         with:
           push: true
-          tags: aaronzjc/prin:${{ github.ref }}
+          tags: aaronzjc/prin:latest, aaronzjc/prin:${{ github.ref }}
       - name: setup ktl
         uses: azure/setup-kubectl@v1
         id: install
