--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,17 @@ on:
   push:
     branches:
       - main
+    tags:
+      - v*
 
 jobs:
   Build_and_Release:
     name: Build & Release & Deploy
     runs-on: ubuntu-latest
     steps:
+      - name: set vars
+        id: vars
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: checkout code
         uses: actions/checkout@v2
       - name: setup nodejs
@@ -37,16 +42,13 @@ jobs:
       - name: build app dist
         run: |
           make prin
-      - name: login docker hub
-        uses: docker/login-action@v1 
+      - name: release prin
+        uses: docker/build-push-action@v1.1.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: release prin
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: aaronzjc/prin:latest, aaronzjc/prin:${{ github.ref }}
+          repository: aaronzjc/prin
+          tags: latest, ${{ steps.vars.outputs.sha_short }}
       - name: setup ktl
         uses: azure/setup-kubectl@v1
         id: install
@@ -57,4 +59,6 @@ jobs:
           EOF
           export KUBECONFIG=$(pwd)/kube-config
           curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
+          sed -i ""s/latest/${{ steps.vars.outputs.sha_short }}/g" prin.yml
+          car prin.yml
           kubectl rollout restart -f prin.yml -n k3s-apps
