--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,13 +41,33 @@ jobs:
       - name: build app dist
         run: |
           make prin
-      - name: release prin
-        uses: docker/build-push-action@v1.1.0
+      - name: prepare docker
+        id: prep
+        run: |
+          DOCKER_IMAGE=aaronzjc/prin
+          VERSION=latest
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+          fi
+          TAGS="${DOCKER_IMAGE}:${VERSION}"
+          if [ "${{ github.event_name }}" = "push" ]; then
+            TAGS="latest,$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+          fi
+          echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=deploy::sha-${GITHUB_SHA::8}
+      - name: set docker buildx
+        uses: docker/setup-buildx-action@v1
+      - name: docker login
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: aaronzjc/prin
-          tags: latest, $SHA8
+      - name: docker build & push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.prep.outputs.tags }}
       - name: setup ktl
         uses: azure/setup-kubectl@v1
         id: install
@@ -58,6 +78,5 @@ jobs:
           EOF
           export KUBECONFIG=$(pwd)/kube-config
           curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
-          sed -i ""s/latest/$SHA8/g" prin.yml
-          car prin.yml
+          echo ${{ steps.prep.outputs.deploy }}
           kubectl rollout restart -f prin.yml -n k3s-apps
