--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,17 +44,7 @@ jobs:
       - name: prepare docker
         id: prep
         run: |
-          DOCKER_IMAGE=aaronzjc/prin
-          VERSION=latest
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-          fi
-          TAGS="${DOCKER_IMAGE}:${VERSION}"
-          if [ "${{ github.event_name }}" = "push" ]; then
-            TAGS="latest,$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
-          fi
-          echo ::set-output name=tags::${TAGS}
-          echo ::set-output name=deploy::sha-${GITHUB_SHA::8}
+          echo ::set-output name=ci_commit_sha::sha-${GITHUB_SHA::8}
       - name: set docker buildx
         uses: docker/setup-buildx-action@v1
       - name: docker login
@@ -67,7 +57,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.prep.outputs.tags }}
+          tags: aaronzjc/prin:latest,aaronzjc/prin:${{ steps.prep.outputs.ci_commit_sha }}
       - name: setup ktl
         uses: azure/setup-kubectl@v1
         id: install
@@ -78,5 +68,5 @@ jobs:
           EOF
           export KUBECONFIG=$(pwd)/kube-config
           curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
-          echo ${{ steps.prep.outputs.deploy }}
+          echo ${{ steps.prep.outputs.ci_commit_sha }}
           kubectl rollout restart -f prin.yml -n k3s-apps
