--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,5 +68,5 @@ jobs:
           EOF
           export KUBECONFIG=$(pwd)/kube-config
           curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
-          sed -i "s/latest/${{ steps.prep.outputs.ci_commit_sha }}" prin.yml
+          sed -i "s/latest/${{ steps.prep.outputs.ci_commit_sha }}/g" prin.yml
           kubectl apply -f prin.yml -n k3s-apps
