--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,9 @@ jobs:
       - name: build frontend
         run: make vue
       - name: setup go env
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
-          go-version: '^1.16'
+          go-version: '>=1.19.0'
       - name: restore Go mod cache
         uses: actions/cache@v2
         with:
