--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,15 +58,15 @@ jobs:
           context: .
           push: true
           tags: aaronzjc/prin:latest,aaronzjc/prin:${{ steps.prep.outputs.ci_commit_sha }}
-      - name: setup ktl
-        uses: azure/setup-kubectl@v1
-        id: install
-      - name: deploy
-        run: |
-          cat << EOF > kube-config
-          ${{ secrets.KUBECONF }}
-          EOF
-          export KUBECONFIG=$(pwd)/kube-config
-          curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
-          sed -i "s/latest/${{ steps.prep.outputs.ci_commit_sha }}/g" prin.yml
-          kubectl apply -f prin.yml -n k3s-apps
+      # - name: setup ktl
+      #   uses: azure/setup-kubectl@v1
+      #   id: install
+      # - name: deploy
+      #   run: |
+      #     cat << EOF > kube-config
+      #     ${{ secrets.KUBECONF }}
+      #     EOF
+      #     export KUBECONFIG=$(pwd)/kube-config
+      #     curl -o prin.yml https://raw.githubusercontent.com/aaronzjc/k3s/main/Deployment/prin.yml
+      #     sed -i "s/latest/${{ steps.prep.outputs.ci_commit_sha }}/g" prin.yml
+      #     kubectl apply -f prin.yml -n k3s-apps
