--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -3,7 +3,7 @@ ENV APP_ENV production
 ENV APP_PATH /app
 RUN apk add --no-cache ca-certificates tzdata && cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 RUN mkdir -p /app/bin /app/public /app/assets
-COPY ./dagger/backend/linux/prin /app/bin
+COPY ./dagger/backend/prin /app/bin
 COPY ./dagger/frontend /app/public
 COPY ./assets /app/assets
 EXPOSE 8980
