--- a/scripts/k8s/Deployment.yaml
+++ b/scripts/k8s/Deployment.yaml
@@ -22,7 +22,7 @@ spec:
         emptyDir: {}
       containers:
       - name: prin
-        image: aaronzjc/prin:1.9
+        image: aaronzjc/prin:latest
         imagePullPolicy: Always
         volumeMounts:
         - name: prin-log-dir
